Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/processing/werror/WErrorGen.out
Gen.java:1:33: compiler.warn.raw.class.use: java.util.List, java.util.List<E>
- compiler.err.warnings.and.werror
1 error
1 warning
